--- a/cms_bs3_theme_solid/templates/cms_bs3_theme/themes/solid/base_theme.html
+++ b/cms_bs3_theme_solid/templates/cms_bs3_theme/themes/solid/base_theme.html
@@ -1,19 +1,5 @@
-{% load cms_tags staticfiles sekizai_tags menu_tags %}
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>{% block title %}DjangoCMS Bootstrap Theme{% endblock title %}</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="{% static 'cms_bs3_theme/src/libs/bootswatch/cerulean/bootstrap.css' %}">
-        {% render_block "css" %}
-    </head>
-    <body>
-        {% cms_toolbar %}
-        {% include bs3_conf.BOOTSTRAP3_MENU_TEMPLATE %}
-        {% block content %}{% endblock content %}
-        <script src="{% static 'cms_bs3_theme/src/libs/jquery/dist/jquery.js' %}"></script>
-        <script src="{% static 'cms_bs3_theme/src/libs/bootstrap-sass/assets/javascripts/bootstrap.js' %}"></script>
-        {% render_block "js" %}
-    </body>
-</html>
+{% extends "cms_bs3_theme/base.html" %}
+{% load static %}
+{% block bs3_theme_css %}
+    <link rel="stylesheet" href="{% static 'cms_bs3_theme_solid/src/css/solid.css' %}">
+{% endblock %}
