Middle and block code.

--- a/cms_bs3_theme_solid/static/cms_bs3_theme_solid/src/css/solid.css
+++ b/cms_bs3_theme_solid/static/cms_bs3_theme_solid/src/css/solid.css
@@ -12637,9 +12637,9 @@ a:focus {
 
 /* Testimonials Wrap */
 /* line 306, ../scss/solid.scss */
-#twrap {
+#middle {
   background: #4a575c;
-  margin-top: 0px;
+  margin-top: 0;
   padding-top: 60px;
   background-attachment: relative;
   background-position: center center;
@@ -12650,23 +12650,25 @@ a:focus {
   -o-background-size: cover;
   background-size: cover;
 }
-
-/* line 326, ../scss/solid.scss */
-#twrap i {
+/* line 325, ../scss/solid.scss */
+#middle i {
   font-size: 50px;
   color: white;
   margin-bottom: 25px;
 }
-
-/* line 332, ../scss/solid.scss */
-#twrap p {
+/* line 331, ../scss/solid.scss */
+#middle p {
   color: white;
   font-size: 15px;
   line-height: 30px;
 }
+/* line 337, ../scss/solid.scss */
+#middle h1, #middle h2, #middle h3, #middle h4, #middle h5, #middle h6 {
+  color: #f7f7f7;
+}
 
 /* clients logo */
-/* line 339, ../scss/solid.scss */
+/* line 343, ../scss/solid.scss */
 #cwrap {
   background: #f7f7f7;
   margin-top: 0px;
@@ -12674,37 +12676,37 @@ a:focus {
   padding-bottom: 100px;
 }
 
-/* line 346, ../scss/solid.scss */
+/* line 350, ../scss/solid.scss */
 #cwrap h3 {
   margin-bottom: 60px;
 }
 
 /* Footer */
-/* line 351, ../scss/solid.scss */
+/* line 355, ../scss/solid.scss */
 #footerwrap {
   padding-top: 60px;
   padding-bottom: 60px;
   background: #384452;
 }
 
-/* line 357, ../scss/solid.scss */
+/* line 361, ../scss/solid.scss */
 #footerwrap p {
   color: #bfc9d3;
 }
 
-/* line 361, ../scss/solid.scss */
+/* line 365, ../scss/solid.scss */
 #footerwrap h4 {
   color: white;
 }
 
-/* line 365, ../scss/solid.scss */
+/* line 369, ../scss/solid.scss */
 #footerwrap i {
   font-size: 30px;
   color: #bfc9d3;
   padding-right: 25px;
 }
 
-/* line 371, ../scss/solid.scss */
+/* line 375, ../scss/solid.scss */
 #footerwrap i:hover {
   color: #00b3fe;
 }
@@ -12713,7 +12715,7 @@ a:focus {
 	PAGE CONFIGURATIONS
 ################################################################# */
 /* General Tweaks */
-/* line 380, ../scss/solid.scss */
+/* line 384, ../scss/solid.scss */
 #blue {
   background: #00b3fe;
   margin-top: 60px;
@@ -12722,44 +12724,44 @@ a:focus {
   padding-bottom: 25px;
 }
 
-/* line 388, ../scss/solid.scss */
+/* line 392, ../scss/solid.scss */
 #blue h3 {
   color: white;
   margin-left: 15px;
 }
 
-/* line 393, ../scss/solid.scss */
+/* line 397, ../scss/solid.scss */
 .ctitle {
   color: #00b3fe;
   font-weight: 700;
   margin-bottom: 15px;
 }
 
-/* line 399, ../scss/solid.scss */
+/* line 403, ../scss/solid.scss */
 csmall {
   font-size: 12px;
   color: #b3b3b3;
 }
 
-/* line 403, ../scss/solid.scss */
+/* line 407, ../scss/solid.scss */
 csmall2 {
   font-size: 12px;
   color: #f39c12;
 }
 
-/* line 408, ../scss/solid.scss */
+/* line 412, ../scss/solid.scss */
 .spacing {
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-/* line 413, ../scss/solid.scss */
+/* line 417, ../scss/solid.scss */
 .badge-theme {
   background: #00b3fe;
 }
 
 /* Contact Page */
-/* line 418, ../scss/solid.scss */
+/* line 422, ../scss/solid.scss */
 #contactwrap {
   background: url(../img/contact.jpg) no-repeat center top;
   margin-top: -60px;
@@ -12776,46 +12778,46 @@ csmall2 {
 }
 
 /* Blog Page */
-/* line 440, ../scss/solid.scss */
+/* line 444, ../scss/solid.scss */
 .popular-posts {
   margin: 0px;
   padding-left: 0px;
 }
 
-/* line 445, ../scss/solid.scss */
+/* line 449, ../scss/solid.scss */
 .popular-posts li {
   list-style: none;
   margin-bottom: 20px;
   min-height: 70px;
 }
 
-/* line 450, ../scss/solid.scss */
+/* line 454, ../scss/solid.scss */
 .popular-posts li a,
 .popular-posts li a:hover {
   color: #2f2f2f;
   text-decoration: none;
 }
 
-/* line 456, ../scss/solid.scss */
+/* line 460, ../scss/solid.scss */
 .popular-posts li img {
   float: left;
   margin-right: 20px;
 }
 
-/* line 461, ../scss/solid.scss */
+/* line 465, ../scss/solid.scss */
 .popular-posts li em {
   font-family: 'Lato', sans-serif;
   font-size: 12px;
   color: #b3b3b3;
 }
 
-/* line 467, ../scss/solid.scss */
+/* line 471, ../scss/solid.scss */
 .popular-posts p {
   line-height: normal;
   margin-bottom: auto;
 }
 
-/* line 472, ../scss/solid.scss */
+/* line 476, ../scss/solid.scss */
 .share i {
   padding-right: 15px;
   font-size: 18px;
@@ -12831,22 +12833,39 @@ html.fluid-fixed-top-default.cms-toolbar-expanded [role=navigation], html.fluid-
   margin-top: 45px;
 }
 
-/* line 480, ../scss/solid.scss */
+/* line 484, ../scss/solid.scss */
 .font-size-150 {
   font-size: 150%;
 }
 
-/* line 483, ../scss/solid.scss */
+/* line 487, ../scss/solid.scss */
 .font-size-200 {
   font-size: 200%;
 }
 
-/* line 486, ../scss/solid.scss */
+/* line 490, ../scss/solid.scss */
 .font-size-300 {
   font-size: 300%;
 }
 
-/* line 489, ../scss/solid.scss */
+/* line 493, ../scss/solid.scss */
 .font-size-400 {
   font-size: 400%;
+}
+
+/* line 497, ../scss/solid.scss */
+.code-block {
+  border: 0;
+  position: relative;
+  color: #b3e115;
+  font-family: Consolas,"Liberation Mono",Courier,monospace;
+  line-height: 1.2;
+  background: #35363C none repeat scroll 0 0;
+  padding: 14px;
+}
+/* line 506, ../scss/solid.scss */
+.code-block code {
+  font-size: 12px;
+  color: #b3e115;
+  background: transparent;
 }
