--- a/cms_bs3_theme_solid/templates/cms_bs3_theme/themes/solid/base_theme.html
+++ b/cms_bs3_theme_solid/templates/cms_bs3_theme/themes/solid/base_theme.html
@@ -1,5 +1,9 @@
 {% extends "cms_bs3_theme/base.html" %}
 {% load static %}
 {% block bs3_theme_css %}
-    <link rel="stylesheet" href="{% static 'cms_bs3_theme_solid/src/css/solid.css' %}">
+    {% if bs3_conf.BOOTSTRAP3_FORCE_SRC %}
+        <link rel="stylesheet" href="{% static 'cms_bs3_theme_solid/src/css/solid.css' %}">
+    {% else %}
+        <link rel="stylesheet" href="{% static 'cms_bs3_theme_solid/dist/css/solid.css' %}">
+    {% endif %}
 {% endblock %}
