--- a/cms_bs3_theme_solid/static/cms_bs3_theme_solid/src/scss/solid.scss
+++ b/cms_bs3_theme_solid/static/cms_bs3_theme_solid/src/scss/solid.scss
@@ -1,6 +1,13 @@
 $icon-font-path: "../libs/bootstrap-sass/assets/fonts/bootstrap/";
 $fa-font-path: "../libs/font-awesome/fonts/";
 
+
+@if compass-env() == 'production' {
+    $fa-font-path: "../../../cms_bs3_theme/dist/fonts/font-awesome";
+    $icon-font-path: "../../../cms_bs3_theme/dist/fonts/bootstrap";
+}
+
+
 $brand-primary: #00B3FE;
 
 
@@ -307,7 +314,7 @@ a:focus {
     background: #4a575c;
     margin-top: 0;
     padding-top:60px;
-    background-attachment: relative;
+    // background-attachment: relative;
     background-position: center center;
     min-height: 450px;
     width: 100%;
