--- a/cms_bs3_theme_solid/static/cms_bs3_theme_solid/src/scss/_common.scss
+++ b/cms_bs3_theme_solid/static/cms_bs3_theme_solid/src/scss/_common.scss
@@ -11,3 +11,14 @@ html {
         }
     }
 }
+
+@for $i from 1 to 20 {
+    $buffer: $i * 5;
+    .top-buffer-#{$buffer} {
+        margin-top: #{$buffer}px;
+    }
+
+    .bottom-buffer-#{$buffer}{
+        margin-bottom: #{$buffer}px;
+    }
+}
